# Web-Automation-Test-Framework

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  JOURNEY.md  LICENSE  PROJECT_SUMMARY.md  README.md  ROADMAP.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: tests.yml
config/: __init__.py  settings.py
docs/: TEST_ARCHITECTURE.md
pages/: __init__.py  base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py
tests/cart/: test_cart.py
tests/checkout/: test_checkout_e2e.py
tests/inventory/: test_inventory.py
tests/login/: test_login.py
tests/sorting/: test_sorting.py
utils/: __init__.py  logger.py  test_data.py
