[tool.poetry]
name = "web-automation-test-framework"
version = "1.0.0"
description = "Enterprise-grade web automation framework using Python + Playwright for comprehensive e-commerce testing"
authors = ["Jason Teixeira <jason@example.com>"]
readme = "README.md"
license = "MIT"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--capture=no",
    "--html=reports/report.html",
    "--self-contained-html",
    "--alluredir=reports/allure-results",
]
markers = [
    "smoke: Quick smoke tests for critical paths",
    "regression: Full regression test suite",
    "login: Login functionality tests",
    "inventory: Product inventory tests",
    "cart: Shopping cart tests",
    "checkout: Checkout flow tests",
    "sorting: Sorting and filtering tests",
    "navigation: Navigation and routing tests",
    "accessibility: Accessibility compliance tests",
    "visual: Visual regression tests",
    "performance: Performance and load tests",
    "security: Security-related tests",
    "slow: Tests that take longer to execute",
    "integration: Integration tests",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | reports
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]

[tool.coverage.run]
source = ["pages", "utils", "config"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "reports/coverage"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
